--- a/example.env
+++ b/example.env
@@ -5,8 +5,12 @@ SECRET_KEY=
 ALGORITHM=
 ACCESS_TOKEN_EXPIRE_MINUTES=
 REFRESH_TOKEN_EXPIRE_MINUTES=
+PASSWORD_RESET_TOKEN_EXPIRE_MINUTES=
 
 SQLALCHEMY_DATABASE_URL=
 
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+
+EMAIL_ENABLED=
+EMAIL_SENDER=
