Create default superuser when initializing the database

--- a/example.env
+++ b/example.env
@@ -9,6 +9,9 @@ PASSWORD_RESET_TOKEN_EXPIRE_MINUTES=
 
 SQLALCHEMY_DATABASE_URL=
 
+SUPERUSER_EMAIL=
+SUPERUSER_PASSWORD=
+
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
