--- a/example.env
+++ b/example.env
@@ -7,7 +7,13 @@ ACCESS_TOKEN_EXPIRE_MINUTES=
 REFRESH_TOKEN_EXPIRE_MINUTES=
 PASSWORD_RESET_TOKEN_EXPIRE_MINUTES=
 
-SQLALCHEMY_DATABASE_URL=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_SERVER=
+POSTGRES_DB=
+POSTGRES_PORT=
+
+SQLITE_DATABASE_URL=
 
 SUPERUSER_EMAIL=
 SUPERUSER_PASSWORD=
