Add env var to use Alembic or not for database creation/migration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - 80:80
     env_file:
       - ./.env
+    environment:
+      - USE_ALEMBIC=true
     depends_on:
       - postgres
   postgres:
