Use postgres service name as DB server in the connection string
- Set the right env variables so the FastAPI app is able to connect
to the database running on a different pod.
- Generate database connection string after the env variables have
been loaded, otherwise the default values are always used in the
Config class definition.
- Fix indentation in YAML files.

--- a/kubernetes/fastapi_app.yaml
+++ b/kubernetes/fastapi_app.yaml
@@ -18,23 +18,20 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: fastapi-deployment
-  spec:
-    replicas: 1
-    selector:
-      matchLabels:
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: fastapi-app
+  template:
+    metadata:
+      labels:
         app: fastapi-app
-    template:
-      metadata:
-        labels:
-          app: fastapi-app
-      spec:
-        containers:
-          - name: fastapi-cont
-            image: mbrignone/fastapi-app
-            imagePullPolicy: Always
-            env:
-              - name: USE_ALEMBIC
-                value: true
-            envFrom:
-              configRef:
+    spec:
+      containers:
+        - name: fastapi-cont
+          image: mbrignone/fastapi-app
+          imagePullPolicy: Always
+          envFrom:
+            - configMapRef:
                 name: fastapi-env
